Add ufw support.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -8,6 +8,7 @@
   with_items:
     - deb http://download.webmin.com/download/repository sarge contrib
     - deb http://webmin.mirror.somersettechsolutions.co.uk/repository sarge contrib
+  notify: restart webmin
   tags: hswong3i.webmin
 
 - name: apt-key add
@@ -16,6 +17,7 @@
     state=present
   with_items:
     - http://www.webmin.com/jcameron-key.asc
+  notify: restart webmin
   tags: hswong3i.webmin
 
 - name: apt-get install
@@ -24,4 +26,27 @@
     state=latest
   with_items:
     - webmin
+  notify: restart webmin
+  tags: hswong3i.webmin
+
+- name: replace in file
+  replace:
+    dest={{ item.dest }}
+    regexp={{ item.regexp }}
+    replace={{ item.replace }}
+  with_items:
+    - { dest: '/etc/webmin/miniserv.conf', regexp: '^listen=.*$', replace: "listen={{ webmin_listen }}" }
+    - { dest: '/etc/webmin/miniserv.conf', regexp: '^port=.*$', replace: "port={{ webmin_port }}" }
+    - { dest: '/etc/webmin/miniserv.conf', regexp: '^ssl=.*$', replace: "ssl={{ webmin_ssl }}" }
+  notify: restart webmin
+  tags: hswong3i.webmin
+
+- name: enable incomming connection
+  ufw:
+    to_port={{ item }}
+    proto=tcp
+    rule=allow
+  with_items:
+    - "{{ webmin_port }}"
+  notify: restart webmin
   tags: hswong3i.webmin
