--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,7 @@ before_install:
   - sudo apt-get -y install ansible
 
 install:
-  - sudo ansible-galaxy install -r .roles.yml
+  - git clone https://github.com/pantarei/ansible-role-webmin.git ../hswong3i.webmin
 
 script:
   - sudo ansible-playbook tests/test.yml -i tests/hosts --syntax-check
