--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,12 +1,15 @@
 ---
 # tasks file for hswong3i.webmin
 
+- name: include release specific variables
+  include_vars: "{{ ansible_distribution_release }}.yml"
+  tags: hswong3i.webmin
+
 - name: apt-key add
   apt_key:
     url: "{{ item.url }}"
     state: "{{ item.state }}"
-  with_items:
-    - { state: "present", url: "http://www.webmin.com/jcameron-key.asc" }
+  with_items: "{{ _apt_key }}"
   notify: restart webmin
   tags: hswong3i.webmin
 
@@ -14,9 +17,7 @@
   apt_repository:
     repo: "{{ item.repo }}"
     state: "{{ item.state }}"
-  with_items:
-    - { state: "present", repo: "deb http://download.webmin.com/download/repository sarge contrib" }
-    - { state: "present", repo: "deb http://webmin.mirror.somersettechsolutions.co.uk/repository sarge contrib" }
+  with_items: "{{ _apt_repository }}"
   notify: restart webmin
   tags: hswong3i.webmin
 
@@ -24,8 +25,7 @@
   apt:
     name: "{{ item.name }}"
     state: "{{ item.state }}"
-  with_items:
-    - { state: "latest", name: "webmin" }
+  with_items: "{{ _apt }}"
   notify: restart webmin
   tags: hswong3i.webmin
 
