--- a/vars/xenial.yml
+++ b/vars/xenial.yml
@@ -5,8 +5,8 @@ _apt_key: [
   { state: "present", url: "http://www.webmin.com/jcameron-key.asc" },
 ]
 _apt_repository: [
+  { state: "absent", repo: "deb http://webmin.mirror.somersettechsolutions.co.uk/repository sarge contrib" },
   { state: "present", repo: "deb http://download.webmin.com/download/repository sarge contrib" },
-  { state: "present", repo: "deb http://webmin.mirror.somersettechsolutions.co.uk/repository sarge contrib" },
 ]
 _apt: [
   { state: "latest", name: "webmin" },
